[package]
name = "lang"
build = "build.rs"
version = "0.1.0"
authors = ["unbalancedparentheses <federico.carrone@gmail.com>"]
edition = "2018"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
rustyline = "5.0.5"
